--- a/css/profano.css
+++ b/css/profano.css
@@ -1,4 +1,4 @@
-body	{	background: url('../images/profano.jpg') no-repeat center center fixed; 
+body	{	background: url('../images/el.buda.profano.vegan.sushi.bar.arequipa.peru.jpg') no-repeat center center fixed; 
 		  -webkit-background-size: cover;
 		  -moz-background-size: cover;
 		  -o-background-size: cover;
