--- a/css/profano.css
+++ b/css/profano.css
@@ -1,10 +1,18 @@
-body	{	background: url('../images/el.buda.profano.vegan.sushi.bar.arequipa.peru.jpg') no-repeat center center fixed; 
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url('../images/el.buda.profano.vegan.sushi.bar.arequipa.peru.jpg') no-repeat center center; 
 		  -webkit-background-size: cover;
 		  -moz-background-size: cover;
 		  -o-background-size: cover;
 		  background-size: cover; } 
-a {
-  color: #0000a2; }
+a { color: #0000a2; }
 .column, .columns   { padding: 15px; background: #66CDAA; border-radius: 15px; opacity:0.8; }    
 .container .one-half.column { background: #66CDAA; }  
 .container .one-third.column { background: #BDB76B; }  
